# armra-space

./: .gitignore  INTEGRATION-SETUP.md  Makefile  SETUP.md  index.html  install-deps.command  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: build-macos.sh  bump.sh  fetch-rclone.sh  rclone-xattr.patch
scripts/macfuse-headers/: README.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  db.rs  lib.rs  main.rs  mount.rs  s3client.rs  sync.rs
src/components/: FileTree.tsx  FilespaceDetail.tsx  LoginScreen.tsx  PinsSidebar.tsx  Settings.tsx  StatusBar.tsx
src/lib/: tauri.ts  utils.ts
